# jcord

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cursor.cpp  cursor.h  default_keymap  dmcache.cpp  dmcache.h  fetcher.cpp  fetcher.h  keybinds.h  main.cpp  main.h  ncurses_keys  offsets.h  token.h  ui.cpp  ui.h
helpers/: ncurses_bindings.c  ncurses_list.c  setup.bash
src/: connector.cpp  cursor.cpp  dmcache.cpp  fetcher.cpp  main.cpp  popup.cpp  ui.cpp  window.cpp
src/headers/: color.h  connector.h  cursor.h  dmcache.h  fetcher.h  keybinds.h  main.h  offsets.h  popup.h  ui.h  window.h
